<resources>
    <string name="app_name">A Partida</string>
    <string name="text_value1">Partida</string>
    <string name="text_value2">Data: </string>
    <string name="text_value3">X</string>
    <string name="text_value4">Público:</string>
    <string name="btn_valor1">Mostrar </string>
    <string-array name="spinner_value">
        <item>Real Madruga</item>
        <item>Inter de Meião</item>
        <item>Barca FC</item>
        <item>Ibis FC</item>
    </string-array>
</resources>